--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,15 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+coverage
+coverage.json
+typechain
+typechain-types
+deployments
+
+# Hardhat files
+cache
+artifacts
+
+
